--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,12 @@
         <h3><a href="https://github.com/chaostheory59?tab=repositories">Quantum Pheonix Website</a></h3>
       </div>
 
+      <div class="work">
+        <img src="https://i.pinimg.com/originals/5a/d6/b2/5ad6b24b52e196f8e62e96e931edd493.jpg" alt="Medieval Knight">
+
+        <h3><a href="https://github.com/chaostheory59/LIRI-Bot">Medieval LIRI helper</a></h3>
+      </div>
+
     </section>
 
   </div>
