--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,12 @@
         <h3><a href="https://github.com/chaostheory59/LIRI-Bot">Medieval LIRI helper</a></h3>
       </div>
 
+      <div class="work">
+        <img src="tenor.gif" alt="amazon giffy">
+
+        <h3><a href="https://github.com/chaostheory59/Bamazon">Bamazon Database</a></h3>
+      </div>
+
     </section>
 
   </div>
