--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <img src="assets/images/Andrew.jpg" class="auth-image" alt="Andrew Vann">
 
-      <p>I am an up and coming programmer who aspires to be a great game creator. I own a company called Quantum Phoenix which currently does reviews for movies and video games. I am outgoing, personalble, fun, and love being around people. I have an AS degree in IT and currently studying web Technologies through George Washington University. Later I plan to get my BS through George Mason.</p>
+      <p>I am an up and coming programmer who aspires to be a great game creator. I own a company called Quantum Phoenix which currently does reviews for movies and video games. I am outgoing, personalble, fun, and love being around people. I have an AS degree in IT and a certificate in web Technologies through George Washington University. Later I plan to get my BS through George Mason.</p>
       <button type="button" class="btn btn-danger"><a href="https://github.com/chaostheory59">Github</a></button>
       <button type="button" class="btn btn-danger"><a href="https://www.linkedin.com/feed/">LinkedIn</a></button>
     </section>
